--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                   </h2>
                </div>
             </div>
-            <div class="row no-gutters">
+            <div class="row m-">
                <div class="col-sm-12 col-md-4">
                      <a href="Project-VR-Data-Visionaire.html">
                      <div class="hovereffect">
@@ -613,140 +613,7 @@
          
       </section>
       <!-- portfolio section -->
-      <section id="portfolio" class="no-padding-bottom xs-onepage-section">
-         <div class="container">
-            <div class="row">
-               <!-- section title -->
-               <div class="col-md-12 text-center">
-                  <h3 class="section-title no-padding">Projects</h3>
-               </div>
-               <!-- end section title -->
-            </div>
-         </div>
-         <div class="container-fuild">
-            <div class="row no-margin-bottom margin-ten">
-               <!--div class="col-md-12 text-center margin-five no-margin-bottom">
-                  <div class="text-center">
-                      <ul class="portfolio-filter nav nav-tabs margin-one no-margin-top xs-margin-bottom-seven">
-                          <li class="nav active"><a href="onepage-personal.html#" data-filter="*">All</a></li>
-                          <li class="nav"><a href="onepage-personal.html#" data-filter=".design">Design</a></li>
-                          <li class="nav"><a href="onepage-personal.html#" data-filter=".graphics">Graphics</a></li>
-                          <li class="nav"><a href="onepage-personal.html#" data-filter=".branding">Branding</a></li>
-                          <li class="nav"><a href="onepage-personal.html#" data-filter=".photography">Photography</a></li>
-                      </ul>
-                  </div>
-                  </div-->
-               <div class="grid-gallery overflow-hidden">
-                  <div class="tab-content">
-                     <ul class="masonry-items grid">
-                        <!-- portfolio item -->
-                        <li class="photography graphics">
-                           <figure>
-                              <div class="gallery-img">
-                                 <a href="Project-VR-Data-Visionaire.html" class="simple-ajax-popup-align-top">
-                                 <img src="images/Project-VR-Data-Visionaire/1.png" alt="">
-                                 </a>
-                              </div>
-                              <figcaption>
-                                 <h3>
-                                    <a href="Project-VR-Data-Visionaire.html" class="simple-ajax-popup-align-top">Data-Visionaire</a>
-                                 </h3>
-                                 <p>Virtual Reality</p>
-                              </figcaption>
-                           </figure>
-                        </li>
-                        <!-- end portfolio item -->
-                        <!-- portfolio item -->
-                        <li class="photography graphics">
-                           <figure>
-                              <div class="gallery-img">
-                                 <a href="Project-VR-Basketball.html" class="simple-ajax-popup-align-top">
-                                 <img src="images/Project-VR-Basketball/1.png" alt="">
-                                 </a>
-                              </div>
-                              <figcaption>
-                                 <h3>
-                                    <a href="Project-VR-Basketball.html" class="simple-ajax-popup-align-top">VR-Basketball</a>
-                                 </h3>
-                                 <p>Virtual Reality</p>
-                              </figcaption>
-                           </figure>
-                        </li>
-                        <!-- end portfolio item -->
-                        <!-- portfolio item -->
-                        <li class="photography graphics">
-                           <figure>
-                              <div class="gallery-img">
-                                 <a href="Project-VR-Maze.html" class="simple-ajax-popup-align-top">
-                                 <img src="images/Project-VR-Maze/1.png" alt="">
-                                 </a>
-                              </div>
-                              <figcaption>
-                                 <h3>
-                                    <a href="Project-VR-Maze.html" class="simple-ajax-popup-align-top">VR-Maze</a>
-                                 </h3>
-                                 <p>Virtual Reality</p>
-                              </figcaption>
-                           </figure>
-                        </li>
-                        <!-- end portfolio item -->
-                        <!-- portfolio item -->
-                        <li class="photography graphics">
-                           <figure>
-                              <div class="gallery-img">
-                                 <a href="Project-VR-Museum.html" class="simple-ajax-popup-align-top">
-                                 <img src="images/Project-VR-Museum/1.png" alt="">
-                                 </a>
-                              </div>
-                              <figcaption>
-                                 <h3>
-                                    <a href="Project-VR-Museum.html" class="simple-ajax-popup-align-top">VR-Museum</a>
-                                 </h3>
-                                 <p>Virtual Reality</p>
-                              </figcaption>
-                           </figure>
-                        </li>
-                        <!-- end portfolio item -->
-                        <!-- portfolio item -->
-                        <li class="photography graphics">
-                           <figure>
-                              <div class="gallery-img">
-                                 <a href="Project-VR-Puzzle.html" class="simple-ajax-popup-align-top">
-                                 <img src="images/Project-VR-Puzzle/1.png" alt="">
-                                 </a>
-                              </div>
-                              <figcaption>
-                                 <h3>
-                                    <a href="Project-VR-Puzzle.html" class="simple-ajax-popup-align-top">VR-Puzzle</a>
-                                 </h3>
-                                 <p>Virtual Reality</p>
-                              </figcaption>
-                           </figure>
-                        </li>
-                        <!-- end portfolio item -->
-                        <!-- portfolio item -->
-                        <li class="photography graphics">
-                           <figure>
-                              <div class="gallery-img">
-                                 <a href="Project-VR-Apartment.html" class="simple-ajax-popup-align-top">
-                                 <img src="images/Project-VR-Apartment/1.png" alt="">
-                                 </a>
-                              </div>
-                              <figcaption>
-                                 <h3>
-                                    <a href="Project-VR-Apartment.html" class="simple-ajax-popup-align-top">VR-Apartment</a>
-                                 </h3>
-                                 <p>Virtual Reality</p>
-                              </figcaption>
-                           </figure>
-                        </li>
-                        <!-- end portfolio item -->
-                     </ul>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </section>
+      
       <!-- end portfolio section -->
       <!-- testimonial section -->
       <!-- <section class="fix-background" style="background-image:url('images/architecture-slider01.jpg');">
