--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                            <span class="font-weight-600">Nationality:</span> Indian
                         </li>
                      </ul>
-                     <a class="highlight-button-dark btn btn-medium button col-centered" href="https://bit.ly/manjogresume">Download Resume</a>
+                     <a class="highlight-button-dark btn btn-medium button col-centered" href="https://bit.ly/manjogres">Download Resume</a>
                   </div>
                </div>
             </div>
